# aerostack_msgs

./: CMakeLists.txt  package.xml
msg/: AliveSignal.msg  BehaviorCommand.msg  DynamicObstacle.msg  DynamicObstacles.msg  ErrorType.msg  FlightActionCommand.msg  FlightState.msg  InventoryItemAnnotation.msg  ListOfInventoryItemAnnotation.msg  ListOfQrCodeLocalized.msg  MotionControlMode.msg  ProcessError.msg  ProcessState.msg  QrCodeLocalized.msg  RecoveryPlanFinished.msg  SharedRobotPosition.msg  SocialCommunicationStatement.msg  TrajectoryWaypoints.msg
srv/: RecoveryPlan.srv  RequestBehavior.srv  RequestBehaviorActivation.srv  SetControlMode.srv
